--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,9 @@ psd
 thumb
 sketch
 
+# Environment variables
+.env
+.env.local
+.env.production
+
 # End of https://www.toptal.com/developers/gitignore/api/react
